force-app/main/default/objects/User/fields/Budget_Leader__c.field-meta.xml
<CustomField>
    <fullName>Budget_Leader__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Budget Leader</label>
    <type>Checkbox</type>
</CustomField>