force-app/main/default/objects/User/fields/Internal_Support_Team__c.field-meta.xml
<CustomField>
    <fullName>Internal_Support_Team__c</fullName>
    <defaultValue>false</defaultValue>
    <description>JG 06.15.20</description>
    <inlineHelpText>Admin or Super User designated to resolve support requests via RGC Support object.</inlineHelpText>
    <label>Internal Support Team</label>
    <type>Checkbox</type>
</CustomField>