force-app/main/default/objects/User/fields/Legal_Leader__c.field-meta.xml
<CustomField>
    <fullName>Legal_Leader__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Legal Leader</label>
    <type>Checkbox</type>
</CustomField>