force-app/main/default/objects/User/fields/Other_Members_of_RPR__c.field-meta.xml
<CustomField>
    <fullName>Other_Members_of_RPR__c</fullName>
    <description>Other Members who participate in RPR meetings, receive Notifications and Reports specific to RPR meeting updates and decisions</description>
    <label>Other Members of RPR</label>
    <length>80</length>
    <type>Text</type>
</CustomField>