force-app/main/default/objects/User/fields/PBO_Associate__c.field-meta.xml
<CustomField>
    <fullName>PBO_Associate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agreement Associate</label>
    <type>Checkbox</type>
</CustomField>