force-app/main/default/objects/User/fields/PBO_Members_of_RPR__c.field-meta.xml
<CustomField>
    <fullName>PBO_Members_of_RPR__c</fullName>
    <description>PBO Members who participate in RPR meetings, receive Notifications and Reports specific to RPR meeting updates and decisions</description>
    <label>Agreement Members of RPR</label>
    <length>80</length>
    <type>Text</type>
</CustomField>