force-app/main/default/objects/User/fields/RGC_Champion__c.field-meta.xml
<CustomField>
    <fullName>RGC_Champion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RGC Champion</label>
    <type>Checkbox</type>
</CustomField>