force-app/main/default/objects/User/fields/RGC_Co_Champion2__c.field-meta.xml
<CustomField>
    <fullName>RGC_Co_Champion2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RGC Co-Champion2</label>
    <type>Checkbox</type>
</CustomField>