force-app/main/default/objects/User/fields/RPM_Leader__c.field-meta.xml
<CustomField>
    <fullName>RPM_Leader__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Research Plan Leader</label>
    <type>Checkbox</type>
</CustomField>