force-app/main/default/objects/User/listViews/ActiveUsers.listView-meta.xml
<ListView>
    <fullName>ActiveUsers</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.NAME</columns>
    <columns>RGC_Champion__c</columns>
    <columns>RGC_Co_Champion__c</columns>
    <columns>RGC_Co_Champion1__c</columns>
    <columns>RGC_Co_Champion2__c</columns>
    <columns>RPM_Leader__c</columns>
    <columns>PBO_Associate__c</columns>
    <columns>Legal_Leader__c</columns>
    <columns>Budget_Leader__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Users</label>
</ListView>